production link in front

--- a/public/index.html
+++ b/public/index.html
@@ -26,8 +26,11 @@
         </div>
     </div>
 
+    <!-- desarrollo -->
+    <!-- <script src="http://localhost:8080/socket.io/socket.io.js"></script> -->
 
-    <script src="http://localhost:8080/socket.io/socket.io.js"></script>
+    <!-- PRODUCCIÓN  -->
+    <script src="https://socket-test-3yk0.onrender.com/socket.io/socket.io.js"></script>
     <script src="./js/socket-client.js"></script>
 </body>
 </html>
